responsive on mobile view fixed

--- a/styles.css
+++ b/styles.css
@@ -197,4 +197,11 @@ button {
   .card {
     flex-direction: column;
   }
+  #histories {
+    display: flex;
+    flex-wrap: wrap;
+  
+    justify-content: space-around;
+   
+  }
 }
